feat: implement complete GraphQL API with PostgreSQL integration
- Add database migration system with custom MigrationManager
- Implement type-safe data layer with separate User/DbUser models
- Add custom TimeOffsetDateTime scalar for GraphQL date handling
- Create hybrid resolvers using SimpleObject and ComplexObject patterns
- Add comprehensive CRUD operations (create, read, batch queries)
- Implement computed fields for enhanced API functionality
- Add development tooling with GraphQL Playground integration
- Update documentation with API usage examples

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,15 @@ members = [
 ]
 
 [workspace.dependencies]
+shared = { path = "./backend/shared" }
 async-graphql = "7.0.17"
 async-graphql-actix-web = "7.0.17"
 actix-web = "4.11.0"
 tokio = {version = "1.47.1", features = ["full"]}
+uuid = { version = "1.18.0", features = ["v4", "serde"] }
+time = { version = "0.3.41", features = ["serde"] }
+sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "time"] }
+serde = { version = "1", features = ["derive"] }
+chrono = { version = "0.4", features = ["serde"] }
+dotenv = "0.15.0"
+anyhow = "1.0.99"
