--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ serde = { version = "1", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15.0"
 anyhow = "1.0.99"
+thiserror = "2.0.16"
