--- a/backend/shared/Cargo.toml
+++ b/backend/shared/Cargo.toml
@@ -13,3 +13,4 @@ time = { workspace = true }
 sqlx = { workspace = true }
 serde = { workspace = true }
 chrono = { workspace = true }
+thiserror = { workspace = true }
