feat: move authentication logic to dedicated AuthService
- Move CurrentUser::from_user_id to AuthService::create_current_user_by_id
- Integrate AuthService with HttpServer through dependency injection
- Enable clean separation between authentication and business logic

Additional changes:
- Fix variable naming in find_all resolver closure
- Remove unused imports to eliminate compiler warnings
- Add resolver = "3" to workspace Cargo.toml for edition 2024
  compatibility

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "backend/rest",
     "backend/hybrid",
 ]
+resolver = "3"
 
 [workspace.dependencies]
 shared = { path = "./backend/shared" }
