--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15.0"
 anyhow = "1.0.99"
 thiserror = "2.0.16"
+serde_json = "1.0.145"
