--- a/backend/rest/Cargo.toml
+++ b/backend/rest/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+shared = { workspace = true }
+actix-web = { workspace = true }
+tokio = { workspace = true }
+serde_json = { workspace = true }
+dotenv = { workspace = true }
+sqlx = { workspace = true }
+chrono = { workspace = true }
