--- a/backend/shared/Cargo.toml
+++ b/backend/shared/Cargo.toml
@@ -14,3 +14,4 @@ sqlx = { workspace = true }
 serde = { workspace = true }
 chrono = { workspace = true }
 thiserror = { workspace = true }
+serde_json = { workspace = true }
